--- a/src/br/com/wss/viwer/frmLogin.form
+++ b/src/br/com/wss/viwer/frmLogin.form
@@ -142,11 +142,12 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLImagen">
+    <Component class="javax.swing.JLabel" name="jLabelIMG">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Img/Trend.jpg"/>
+          <Image iconType="3" name="/br/com/wss/img/Trend.jpg"/>
         </Property>
+        <Property name="text" type="java.lang.String" value="jLabel2"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
